--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Favicon-->
     <link
       rel="shortcut icon"
       href="./images/favicon-32x32.png"
       type="image/x-icon"
     />
+    <!--GOOGLE FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,6 +22,7 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
+    <!--STYLESHEETS-->
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/main.css" />
     <title>Splitter</title>
@@ -28,11 +31,11 @@
     <header class="header">
       <img src="./images/logo.svg" alt="logo" class="logo" />
     </header>
-    <main>
+    <main class="main">
       <div class="calculator">
-        <div class="inputs">
+        <div>
           <span class="bill-span">Bill</span>
-          <div class="test">
+          <div class="img-input-div">
             <div>
               <img src="./images/icon-dollar.svg" alt="dollar" class="img"/>
               <input type="text" class="input" placeholder="142.55"/>
@@ -40,15 +43,15 @@
           </div>
           <span class="select-span">Select Tip % </span>
           <div class="tip">
-            <button class="tip-btn">5%</button> 
-            <button class="tip-btn">10%</button> 
-            <button class="tip-btn">15%</button> 
-            <button class="tip-btn">25%</button> 
-            <button class="tip-btn">50%</button> 
+            <button class="tipBtn">5%</button> 
+            <button class="tipBtn">10%</button> 
+            <button class="tipBtn">15%</button> 
+            <button class="tipBtn">25%</button> 
+            <button class="tipBtn">50%</button> 
             <input type="text" placeholder="Custom" class="input-custom"></input>
           </div>
           <span class="number-people">Number of People</span>
-          <div class="test">
+          <div class="img-input-div">
               <div>
                   <img src="./images/icon-person.svg" alt="person" class="img"/>
                   <input type="text" class="input" placeholder="5"/>
@@ -56,21 +59,37 @@
           </div>
         </div>
         <div class="preview">
-            <span class="tip-amount">Tip Amount </span>
-            <span class="person">/ person</span>
-            <div class="dollar-input">
-                <i class="uil uil-dollar-alt img-prevw"></i>
-                <input type="text" class="input-preview" placeholder="5">
-            </div>
+            <div class="tip-person">
+                <span class="tip-amount">Tip Amount </span>
+                <span class="person">/ person</span>
+            </div> 
+                <div class="dollar-input">
+                    <span class="tip-dollar"><i class="uil uil-dollar-alt i-prevw"></i>0.00</span>
+                </div>
+            <div class="total-person">
              <span class="total-bill">Total </span> 
              <span class="person">/ person</span>
+            </div> 
              <div class="dollar-input"> 
-                <i class="uil uil-dollar-alt img-prevw"></i>
-                <input type="text" class="input-preview" placeholder="5">
+                <span class="tip-dollar"><i class="uil uil-dollar-alt i-prevw"></i>0.00</span>
              </div>
              <button class="reset-btn">Reset</button>
             </div>
       </div>
     </main>
+    <footer class="footer">
+        <div class="attribution">
+          <span>Challenge by</span>
+          <a
+            href="https://www.frontendmentor.io?ref=challenge"
+            target="_blank"
+            class="link"
+            >Frontend Mentor</a
+          >. <span>Coded by</span>
+          <a href="https://github.com/mdanieladla" target="_blank" class="link"
+            >Daniela Darnea</a
+          >.
+        </div>
+      </footer>
   </body>
 </html>
