--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
           <div class="img-input-div">
             <div>
               <img src="./images/icon-dollar.svg" alt="dollar" class="img"/>
-              <input type="text" class="input" placeholder="142.55"/>
+              <input type="text" class="input js-input-bill" placeholder="142.55"/>
             </div>
           </div>
           <span class="select-span">Select Tip % </span>
           <div class="tip">
-            <button class="tipBtn">5%</button> 
-            <button class="tipBtn">10%</button> 
-            <button class="tipBtn">15%</button> 
-            <button class="tipBtn">25%</button> 
-            <button class="tipBtn">50%</button> 
-            <input type="text" placeholder="Custom" class="input-custom"></input>
+            <button class="tipBtn js-tip-btn">5%</button> 
+            <button class="tipBtn js-tip-btn">10%</button> 
+            <button class="tipBtn js-tip-btn">15%</button> 
+            <button class="tipBtn js-tip-btn">25%</button> 
+            <button class="tipBtn js-tip-btn">50%</button> 
+            <input type="text" placeholder="Custom" class="input-custom js-custom"></input>
           </div>
           <span class="number-people">Number of People</span>
           <div class="img-input-div">
               <div>
                   <img src="./images/icon-person.svg" alt="person" class="img"/>
-                  <input type="text" class="input" placeholder="5"/>
+                  <input type="text" class="input js-number-people" placeholder="5"/>
                 </div>
           </div>
         </div>
@@ -91,5 +91,6 @@
           >.
         </div>
       </footer>
+      <script src="./scripts/main.js"></script>
   </body>
 </html>
