added error message input numberpeople and class mb div people

--- a/index.html
+++ b/index.html
@@ -51,12 +51,15 @@
             <input type="text" placeholder="Custom" class="input-custom js-custom"></input>
           </div>
           <span class="number-people">Number of People</span>
-          <div class="img-input-div">
+          <div class="img-input-div mb">
               <div>
+                
                   <img src="./images/icon-person.svg" alt="person" class="img"/>
                   <input type="text" class="input js-number-people" placeholder="5"/>
                 </div>
+                
           </div>
+          <span class="err-message"></span>
         </div>
         <div class="preview">
             <div class="tip-person">
@@ -71,7 +74,7 @@
              <span class="person">/ person</span>
             </div> 
              <div class="dollar-input"> 
-                <span class="tip-dollar"><i class="uil uil-dollar-alt i-prevw"></i>0.00</span>
+                <span class="tip-dollar js-total"><i class="uil uil-dollar-alt i-prevw"></i>0.00</span>
              </div>
              <button class="reset-btn">Reset</button>
             </div>
