--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
              <div class="dollar-input"> 
                 <span class="tip-dollar js-total"><i class="uil uil-dollar-alt i-prevw"></i>0.00</span>
              </div>
-             <button class="reset-btn">Reset</button>
+             <button class="reset-btn js-reset-btn">Reset</button>
             </div>
       </div>
     </main>
