added value to input people

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <div>
                 
                   <img src="./images/icon-person.svg" alt="person" class="img"/>
-                  <input type="text" class="input js-number-people" placeholder="5"/>
+                  <input type="text" class="input js-number-people" placeholder="0" value="1"/>
                 </div>
                 
           </div>
