added value to tip btns

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
           </div>
           <span class="select-span">Select Tip % </span>
           <div class="tip">
-            <button class="tipBtn js-tip-btn">5%</button> 
-            <button class="tipBtn js-tip-btn">10%</button> 
-            <button class="tipBtn js-tip-btn">15%</button> 
-            <button class="tipBtn js-tip-btn">25%</button> 
-            <button class="tipBtn js-tip-btn">50%</button> 
+            <button value="5" class="tipBtn js-tip-btn">5%</button> 
+            <button value="10" class="tipBtn js-tip-btn">10%</button> 
+            <button value="15" class="tipBtn js-tip-btn">15%</button> 
+            <button value="25" class="tipBtn js-tip-btn">25%</button> 
+            <button value="50" class="tipBtn js-tip-btn">50%</button> 
             <input type="text" placeholder="Custom" class="input-custom js-custom"></input>
           </div>
           <span class="number-people">Number of People</span>
