added js class to tip amount

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <span class="person">/ person</span>
             </div> 
                 <div class="dollar-input">
-                    <span class="tip-dollar"><i class="uil uil-dollar-alt i-prevw"></i>0.00</span>
+                    <span class="tip-dollar js-tip-amount"><i class="uil uil-dollar-alt i-prevw"></i>0.00</span>
                 </div>
             <div class="total-person">
              <span class="total-bill">Total </span> 
