--- a/index.html
+++ b/index.html
@@ -37,63 +37,73 @@
           <span class="bill-span">Bill</span>
           <div class="img-input-div">
             <div>
-              <img src="./images/icon-dollar.svg" alt="dollar" class="img"/>
-              <input type="text" class="input js-input-bill" placeholder="142.55"/>
+              <img src="./images/icon-dollar.svg" alt="dollar" class="img" />
+              <input
+                type="text"
+                class="input js-input-bill"
+                placeholder="142.55"
+              />
             </div>
           </div>
           <span class="select-span">Select Tip % </span>
           <div class="tip">
-            <button value="5" class="tipBtn js-tip-btn">5%</button> 
-            <button value="10" class="tipBtn js-tip-btn">10%</button> 
-            <button value="15" class="tipBtn js-tip-btn">15%</button> 
-            <button value="25" class="tipBtn js-tip-btn">25%</button> 
-            <button value="50" class="tipBtn js-tip-btn">50%</button> 
-            <input type="text" placeholder="Custom" class="input-custom js-custom"></input>
+            <button value="5" class="tipBtn js-tip-btn">5%</button>
+            <button value="10" class="tipBtn js-tip-btn">10%</button>
+            <button value="15" class="tipBtn js-tip-btn">15%</button>
+            <button value="25" class="tipBtn js-tip-btn">25%</button>
+            <button value="50" class="tipBtn js-tip-btn">50%</button>
+            <input
+              type="text"
+              placeholder="Custom"
+              class="input-custom js-custom"
+            />
           </div>
           <span class="number-people">Number of People</span>
           <div class="img-input-div mb">
-              <div>
-                
-                  <img src="./images/icon-person.svg" alt="person" class="img"/>
-                  <input type="text" class="input js-number-people" value="1"/>
-                </div>
-                
+            <div>
+              <img src="./images/icon-person.svg" alt="person" class="img" />
+              <input type="text" class="input js-number-people" value="1" />
+            </div>
           </div>
           <span class="err-message"></span>
         </div>
         <div class="preview">
-            <div class="tip-person">
-                <span class="tip-amount">Tip Amount </span>
-                <span class="person">/ person</span>
-            </div> 
-                <div class="dollar-input">
-                    <span class="tip-dollar js-tip-amount"><i class="uil uil-dollar-alt i-prevw"></i>0.00</span>
-                </div>
-            <div class="total-person">
-             <span class="total-bill">Total </span> 
-             <span class="person">/ person</span>
-            </div> 
-             <div class="dollar-input"> 
-                <span class="tip-dollar js-total"><i class="uil uil-dollar-alt i-prevw"></i>0.00</span>
-             </div>
-             <button class="reset-btn js-reset-btn">Reset</button>
-            </div>
+          <div class="tip-person">
+            <span class="tip-amount">Tip Amount </span>
+            <span class="person">/ person</span>
+          </div>
+          <div class="dollar-input">
+            <span class="tip-dollar js-tip-amount"
+              ><i class="uil uil-dollar-alt i-prevw"></i>0.00</span
+            >
+          </div>
+          <div class="total-person">
+            <span class="total-bill">Total </span>
+            <span class="person">/ person</span>
+          </div>
+          <div class="dollar-input">
+            <span class="tip-dollar js-total"
+              ><i class="uil uil-dollar-alt i-prevw"></i>0.00</span
+            >
+          </div>
+          <button class="reset-btn js-reset-btn">Reset</button>
+        </div>
       </div>
     </main>
     <footer class="footer">
-        <div class="attribution">
-          <span>Challenge by</span>
-          <a
-            href="https://www.frontendmentor.io?ref=challenge"
-            target="_blank"
-            class="link"
-            >Frontend Mentor</a
-          >. <span>Coded by</span>
-          <a href="https://github.com/mdanieladla" target="_blank" class="link"
-            >Daniela Darnea</a
-          >.
-        </div>
-      </footer>
-      <script src="./scripts/main.js"></script>
+      <div class="attribution">
+        <span>Challenge by</span>
+        <a
+          href="https://www.frontendmentor.io?ref=challenge"
+          target="_blank"
+          class="link"
+          >Frontend Mentor</a
+        >. <span>Coded by</span>
+        <a href="https://github.com/mdanieladla" target="_blank" class="link"
+          >Daniela Darnea</a
+        >.
+      </div>
+    </footer>
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
